# infra-id-rs

./: Cargo.toml  Dockerfile  README.md  app.toml  docker_build.sh
scripts/: docker-compose-group.yml  docker-compose.yml  id.conf
src/: main.rs  snowflake.rs
src/common/: common.rs  mod.rs
src/handler/: error_handler.rs
src/routes/: id_route.rs  mod.rs
src/services/: id_service.rs  mod.rs
src/setup/: component_setup.rs  log_setup.rs  mod.rs
